[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
dioxus = { version="0.2.3", features=["web"] }
console_error_panic_hook ="0.1"
tracing="0.1"
tracing-wasm="0.2"
web-sys={ version = "0.3", features = ["Window", "Storage"]}
serde = { version = "1", features = ["derive"]}
serde_json ="1"
